--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "description": "Logo maker using nodeJS",
   "main": "index.js",
-  "type": "module",
   "directories": {
     "example": "examples",
     "lib": "lib"
   },
   "scripts": {
-    "start": "node index.js"
+    "test": "jest"
   },
   "author": "Yogesh",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^9.2.12"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
